// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapCard.vue Methods should show thumbnail error 1`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card">
  <div class="card-media has-error">
    <!---->
    <div class="MapCard-error"></div>
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><a href="#">Hi</a><span>, </span></li>
          <li><a href="#">Hello</a><span>, </span></li>
          <li><a href="#">CARTO Rules</a>
            <!---->
          </li>
          <!---->
        </ul>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle favorite state 1`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card">
  <div class="card-media"><img src="http://undefined/api/v1/map/static/named/tpl_f8e13983_bb08_4ca9_b64a_f34e76fe077a/600/280.png?auth_token=feZhHEP4vJEbTbF3PEgyvA&amp;auth_token=00580a1519bad8a50dba717dc0bb82bd357084c01212ba90f6058a226457e77d">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite is-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><a href="#">Hi</a><span>, </span></li>
          <li><a href="#">Hello</a><span>, </span></li>
          <li><a href="#">CARTO Rules</a>
            <!---->
          </li>
          <!---->
        </ul>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 1`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card card--noHover">
  <div class="card-media"><img src="http://undefined/api/v1/map/static/named/tpl_f8e13983_bb08_4ca9_b64a_f34e76fe077a/600/280.png?auth_token=feZhHEP4vJEbTbF3PEgyvA&amp;auth_token=00580a1519bad8a50dba717dc0bb82bd357084c01212ba90f6058a226457e77d">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><a href="#">Hi</a><span>, </span></li>
          <li><a href="#">Hello</a><span>, </span></li>
          <li><a href="#">CARTO Rules</a>
            <!---->
          </li>
          <!---->
        </ul>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle mouse hover 2`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card">
  <div class="card-media"><img src="http://undefined/api/v1/map/static/named/tpl_f8e13983_bb08_4ca9_b64a_f34e76fe077a/600/280.png?auth_token=feZhHEP4vJEbTbF3PEgyvA&amp;auth_token=00580a1519bad8a50dba717dc0bb82bd357084c01212ba90f6058a226457e77d">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><a href="#">Hi</a><span>, </span></li>
          <li><a href="#">Hello</a><span>, </span></li>
          <li><a href="#">CARTO Rules</a>
            <!---->
          </li>
          <!---->
        </ul>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue Methods should toggle selected state 1`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card selected">
  <div class="card-media"><img src="http://undefined/api/v1/map/static/named/tpl_f8e13983_bb08_4ca9_b64a_f34e76fe077a/600/280.png?auth_token=feZhHEP4vJEbTbF3PEgyvA&amp;auth_token=00580a1519bad8a50dba717dc0bb82bd357084c01212ba90f6058a226457e77d">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite is-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><a href="#">Hi</a><span>, </span></li>
          <li><a href="#">Hello</a><span>, </span></li>
          <li><a href="#">CARTO Rules</a>
            <!---->
          </li>
          <!---->
        </ul>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue should render correct contents 1`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card">
  <div class="card-media"><img src="http://undefined/api/v1/map/static/named/tpl_f8e13983_bb08_4ca9_b64a_f34e76fe077a/600/280.png?auth_token=feZhHEP4vJEbTbF3PEgyvA&amp;auth_token=00580a1519bad8a50dba717dc0bb82bd357084c01212ba90f6058a226457e77d">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite is-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption is-txtSoftGrey">mapCard.noDescription</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><span>mapCard.noTags</span></li>
        </ul>
      </li>
    </ul>
  </div>
</a>
`;

exports[`MapCard.vue should render description and tags 1`] = `
<a href="https://team.carto.com/u/cillas/viz/f8e13983-bb08-4ca9-b64a-f34e76fe077a" class="card map-card">
  <div class="card-media"><img src="http://undefined/api/v1/map/static/named/tpl_f8e13983_bb08_4ca9_b64a_f34e76fe077a/600/280.png?auth_token=feZhHEP4vJEbTbF3PEgyvA&amp;auth_token=00580a1519bad8a50dba717dc0bb82bd357084c01212ba90f6058a226457e77d">
    <!---->
  </div> <span class="checkbox card-select"><input type="checkBox" class="checkbox-input"> <span class="checkbox-decoration"><img svg-inline="" src="../assets/icons/common/checkbox.svg"></span></span>
  <div class="card-actions"><span class="card-actionsSelect"><img src="../assets/icons/common/options.svg"></span></div>
  <div class="card-text">
    <div class="card-header">
      <h2 class="card-title title is-caption">
        Airbnb listings VS metro stations&nbsp;
        <span class="card-favorite is-favorite"><img svg-inline="" src="../assets/icons/common/favorite.svg"></span></h2>
      <p class="card-description text is-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
    </div>
    <ul class="card-metadata">
      <li class="card-metadataItem text is-caption"><span class="icon icon--privacy icon--private"></span>
        <p>mapCard.shared.PRIVATE</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/calendar.svg"></span>
        <p>mapCard.lastUpdate</p>
      </li>
      <li class="card-metadataItem text is-caption"><span class="icon"><img inline-svg="" src="../assets/icons/maps/tag.svg"></span>
        <ul class="card-tagList">
          <li><a href="#">Hi</a><span>, </span></li>
          <li><a href="#">Hello</a><span>, </span></li>
          <li><a href="#">CARTO Rules</a>
            <!---->
          </li>
          <!---->
        </ul>
      </li>
    </ul>
  </div>
</a>
`;
